# mev-shield

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
ai/: hackathon-materials.md  progress.md
app/: package-lock.json  package.json  tailwind.config.ts
app/ai/: memory.md  progress.md
app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: BalanceDisplay.tsx  BatchResult.tsx  BatchTimer.tsx  DepositPanel.tsx  Header.tsx  OrderForm.tsx  PrivacyBadge.tsx
app/hooks/: useShieldProgram.ts
app/lib/: anchor.ts  constants.ts  pdas.ts
programs/mev-shield/: Cargo.toml
programs/mev-shield/src/: constants.rs  errors.rs  lib.rs
programs/mev-shield/src/instructions/: cancel_order.rs  deposit.rs  initialize.rs  mod.rs  open_batch.rs  settle_batch.rs  submit_order.rs  withdraw.rs
programs/mev-shield/src/state/: batch.rs  config.rs  mod.rs  order.rs  user_balance.rs
scripts/: init-devnet.ts
settler/: package.json  tsconfig.json
settler/src/: index.ts
tests/: mev-shield.ts
