[package]
name = "mev-shield"
version = "0.1.0"
description = "MEV Shield - Private Batch Auction DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mev_shield"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
blake3 = "=1.5.5"
